--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "commander": "^12.1.0",
     "dockerode": "^4.0.2",
     "inquirer": "^9.2.23",
+    "ora": "^8.0.1",
     "readline": "^1.3.0"
   }
 }
