--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "xyz": "./src/index.js"
+    "xyz": "./src/index.js --no-warnings"
   },
   "repository": {
     "type": "git",
