--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Hacker-Lab-Pro/hackerlab-scripts#readme",
   "dependencies": {
+    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "dockerode": "^4.0.2",
