--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "inquirer": "^9.2.23",
     "ora": "^8.0.1",
     "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/dockerode": "^3.3.30"
   }
 }
