--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,26 +1,15 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "runtimeVersion": "18.20.4",
-            "args": [
-                "add",
-                "bwapp"
-            ],
-            "env": {
-                "HLB_DEBUG": "true"
-            },
-            "program": "${workspaceFolder}/src/index.js",
-            "console": "integratedTerminal"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python Debugger: Current File",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/vlem/__main__.py",
+      "console": "integratedTerminal"
+    }
+  ]
 }
