--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,16 +3,21 @@ name: Publish to PyPI
 on:
   push:
     tags:
-      - "v*.*.*" # Trigger only on version tags like v1.0.0
+      - "v*.*.*" # Only run on version tags like v1.2.3
+
+permissions:
+  contents: write
 
 jobs:
   publish:
-    name: Build and publish
+    name: Build and Publish Package
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Required to access tags
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,12 +27,33 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
 
-      - name: Configure Poetry
-        run: |
-          poetry config pypi-token.pypi ${{ secrets.POETRY_PYPI_TOKEN }}
+      - name: Configure Poetry for PyPI
+        run: poetry config pypi-token.pypi ${{ secrets.POETRY_PYPI_TOKEN }}
 
-      - name: Build the package
-        run: poetry build
+      - name: Build Distribution
+        run: poetry build --no-interaction --no-ansi
 
       - name: Publish to PyPI
-        run: poetry publish
+        run: poetry publish --no-interaction --no-ansi
+
+      - name: Extract Version from Tag
+        id: version
+        run: echo "value=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+
+      - name: Bump Version in pyproject.toml
+        run: |
+          poetry version "${{ steps.version.outputs.value }}"
+          echo "${{ steps.version.outputs.value }}" > VERSION
+
+      - name: Commit Version Update
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions Bot"
+          git add pyproject.toml VERSION
+          git commit -m "chore: Bump version to v${{ steps.version.outputs.value }}"
+
+      - name: Push Version Commit
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref_name }}
