--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -36,10 +36,10 @@ jobs:
               run: poetry run pytest
 
             - name: Lint with flake8
-              run: poetry run flake8 vlem --count --select=E9,F63,F7,F82 --show-source --statistics --max-line-length=88 --statistics
+              run: poetry run flake8 src/vlem --count --select=E9,F63,F7,F82 --show-source --statistics --max-line-length=88 --statistics
 
             - name: Check Formatting with Black
-              run: poetry run black --check --line-length 88 vlem
+              run: poetry run black --check --line-length 88 src/vlem
 
             - name: Check Formatting with Prettier
               uses: creyD/prettier_action@v4.3
