--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,8 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "cpy ../data/labs.json labs.json && vite",
+        "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
@@ -16,14 +16,16 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
-        "@types/node": "^22.15.19",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
-        "@vitejs/plugin-react": "^4.4.1",
+        "@vitejs/plugin-react-swc": "^3.9.0",
+        "cpy-cli": "^5.0.0",
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
         "vite": "^6.3.5"
     }
 }
