--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -26,6 +26,7 @@ jobs:
               with:
                   node-version: "22"
                   cache: "npm"
+                  cache-dependency-path: "./web/package-lock.json"
 
             - name: Install dependencies
               run: npm install
