--- a/web/package.json
+++ b/web/package.json
@@ -1,13 +1,18 @@
 {
-    "name": "web",
+    "name": "vlem-web",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.1.0",
     "type": "module",
     "scripts": {
-        "dev": "cpy ../data/labs.json labs.json && vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
+        "dev": "node scripts/copy-data.js && vite",
+        "build": "node scripts/copy-data.js && tsc -b && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "node scripts/copy-data.js && vite preview",
+        "type-check": "tsc --noEmit",
+        "serve": "netlify dev",
+        "deploy": "node scripts/copy-data.js && npm run build && netlify deploy --message \"Manual preview $(date)\"",
+        "deploy:prod": "node scripts/copy-data.js && npm run build && netlify deploy --prod --message \"Production deployment $(date)\"",
+        "clean": "rimraf dist node_modules/.vite"
     },
     "dependencies": {
         "@netlify/functions": "^3.1.8",
@@ -16,16 +21,26 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
+        "@types/node": "^20.11.0",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react-swc": "^3.9.0",
-        "cpy-cli": "^5.0.0",
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "netlify-cli": "^17.16.0",
+        "rimraf": "^5.0.5",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
         "vite": "^6.3.5"
-    }
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+    ]
 }
