--- a/.github/workflows/deploy-web-production.yml
+++ b/.github/workflows/deploy-web-production.yml
@@ -47,7 +47,7 @@ jobs:
                   apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
                   accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
                   projectName: vlem
-                  directory: ./web/dist
+                  directory: ./dist
                   gitHubToken: ${{ secrets.GITHUB_TOKEN }}
                   branch: main
                   workingDirectory: ./web
